[profile.dev]
# Enable this if you want to run `--ignored` tests against a large private
# corpus, or simply to improve performance in test mode.
#opt-level = 3

[workspace]
members = ["cli_test_dir", "substudy", "deprecated/common_failures"]

# Removed until I can update `nom` over 5 major releases.
#
# "vobsub", "vobsub2png"]

# Use the new resolver.
resolver = "2"
