[profile.dev]
# Enable this if you want to run `--ignored` tests against a large private
# corpus, or simply to improve performance in test mode.
#opt-level = 3

[workspace]
members = ["cli_test_dir", "substudy"]

# Removed until I can update `nom` over 5 major releases.
#
# "vobsub", "vobsub2png"

# Dioxus workspace support is broken:
# https://github.com/DioxusLabs/dioxus/issues/1990
exclude = ["substudy-ui"]

# Use the new resolver.
resolver = "2"
