[package]
name = "aligned_media"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2021"

description = "Rust implementation of the \"aligned media\" format for language-learning software."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/subtitles-rs"
documentation = "https://docs.rs/aligned_media/"

[dependencies]
isolang = { version = "2.4.0", features = ["serde"] }
peg = "0.8.2"
relative-path = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
