[package]
name = "common_failures"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Implementations of failure::Fail for common errors, plus helper utilities."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/subtitles-rs"
documentation = "https://docs.rs/common_failures/"

[dependencies]
failure = "0.1.1"
