[package]
name = "substudy-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = { version = "3.3.0", optional = true }
anyhow = "1.0.81"
dioxus = { version = "0.5.0", features = ["fullstack"] }
dotenv = { version = "0.15.0", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
uuid = { version = "1.7.0", features = ["serde"] }

[features]
default = []
server = ["dioxus/axum", "dioxus/ssr", "dotenv", "ammonia"]
web = ["dioxus/web"]

# [profile.release]
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = true
# incremental = false
