[package]

name = "substudy"
version = "0.4.5"
authors = ["Eric Kidd <git@randomhacks.net>"]
license = "CC0-1.0"
edition = "2021"

description = """Language-learning tools for working with parallel, bilingual
subtitles and media files."""

homepage = "http://www.randomhacks.net/substudy/"
documentation = "http://docs.rs/substudy"
repository = "https://github.com/emk/substudy"
readme = "README.md"
keywords = ["text"]

exclude = ["fixtures/empty.mp4"]

[dependencies]
anyhow = "1.0.80"
cast = "0.3.0"
chardet = "0.2"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
csv = "1.0.0"
encoding = "0.2"
env_logger = "0.11.2"
handlebars = "5.1.0"
lazy_static = "1.0"
log = "0.4.21"
num = "0.4.1"
pbr = "1.0"
peg = "0.8.2"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whatlang = "0.16.4"

[dev-dependencies]
cli_test_dir = { version = "0.1", path = "../cli_test_dir" }
difference = "2.0.0"

[[bin]]
name = "substudy"
test = false
doc = false
