[package]

name = "substudy"
version = "0.6.9"
authors = ["Eric Kidd <git@randomhacks.net>"]
license = "Apache-2.0"
edition = "2021"

description = """Language-learning tools for working with parallel, bilingual
subtitles and media files."""

homepage = "http://www.randomhacks.net/substudy/"
documentation = "http://docs.rs/substudy"
repository = "https://github.com/emk/substudy"
readme = "README.md"
keywords = ["text"]

exclude = ["/fixtures"]

[dependencies]
anyhow = "1.0.80"
async-openai = { git = "https://github.com/emk/async-openai.git", branch = "transcription_verbose_json" }
#async-openai = { path = "../../async-openai/async-openai" }
async-trait = "0.1.79"
audiotags = "0.5.0"
bincode = "1.3.3"
bytemuck = "1.15.0"
cast = "0.3.0"
chardet = "0.2"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
csv = "1.0.0"
diff = "0.1.13"
dirs = "5.0.1"
dotenv = "0.15.0"
encoding = "0.2"
env_logger = "0.11.2"
futures = "0.3.30"
handlebars = "5.1.0"
indicatif = "0.17.8"
lazy_static = "1.0"
lending-iterator = "0.1.7"
log = "0.4.21"
num = "0.4.1"
ordered-float = { version = "4.0", default-features = false }
paragraph-breaker = "0.4.4"
peg = "0.8.2"
regex = "1.10.3"
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tempfile = "3.10.1"
tokio = { version = "1.0", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
unicode-width = "0.1.5"
webrtc-vad = "0.4.0"
whatlang = "0.16.4"

[dev-dependencies]
cli_test_dir = { version = "0.1", path = "../cli_test_dir" }
difference = "2.0.0"
