[package]
name = "vobsub"
version = "0.2.3"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2021"

description = "Decode DVD VobSub-format subtitles (*.sub/*.idx files)"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/subtitles-rs"
documentation = "https://docs.rs/vobsub/"

# This is probably ignored anyway, but let's make it explicit.  We don't
# want to include this in our released gem because (1) it's unnecessary,
# and (2) we want to be able to include non-CC0 snippets in fuzz/corpus and
# not release them with this crate.
exclude = ["fuzz"]

[dev-dependencies]
env_logger = "0.11.2"
glob = "0.3.1"

[dependencies]
cast = "0.3.0"
common_failures = { version = "0.1", path = "../common_failures" }
failure = "0.1.1"
image = { version = "0.24.9", default-features = false }
lazy_static = "1.0"
log = "0.4.21"
nom = "2.1.0, <2.2.0"
regex = "1.10.3"
safemem = "0.3.3"
