[package]
name = "vobsub2png"
version = "0.1.3"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Tool to convert DVD VobSub-format subtitles (*.sub/*.idx files) to PNGs"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/subtitles-rs"
documentation = "https://github.com/emk/subtitles-rs/blob/master/vobsub2png/README.md"

[dev-dependencies]
cli_test_dir = { version = "0.1.0", path = "../cli_test_dir" }

[dependencies]
docopt = "0.7.0"
env_logger = "0.4.0"
error-chain = "0.10.0"
image = { version = "0.13.0", default-features = false, features = ["png_codec"] }
log = "0.3.6"
rustc-serialize = "0.3.22"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
vobsub = { version = "0.2.2", path = "../vobsub" }
