[package]
name = "vobsub2png"
version = "0.1.4"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Tool to convert DVD VobSub-format subtitles (*.sub/*.idx files) to PNGs"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/emk/subtitles-rs"
documentation = "https://github.com/emk/subtitles-rs/blob/master/vobsub2png/README.md"

[dev-dependencies]
cli_test_dir = { version = "0.1", path = "../cli_test_dir" }

[dependencies]
common_failures = { version = "0.1", path = "../common_failures" }
docopt = "0.8"
env_logger = "0.4"
failure = "0.1.1"
image = { version = "0.18", default-features = false, features = ["png_codec"] }
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vobsub = { version = "0.2", path = "../vobsub" }
