[package]
name = "common_failures"
version = "0.2.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2021"

description = "DEPRECATED: Helpers for `failure`, including io::Error wrappers with paths, quick_main!, display_causes_and_backtrace. Deprecated, because `failure` is long-deprecated."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/emk/subtitles-rs"
documentation = "https://docs.rs/common_failures/"


[badges]
appveyor = { repository = "emk/subtitles-rs" }
travis-ci = { repository = "emk/subtitles-rs" }
maintenance = { status = "deprecated" }

[dependencies]
failure = "0.1.1"
