[package]
name = "dict_importer"
version = "0.1.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
license = "Apache-2.0"
edition = "2021"

description = """Import dictd-format dictionaries, including donwloading from FreeDict."""

homepage = "https://github.com/emk/subtitles-rs"
documentation = "http://docs.rs/dict_import"
repository = "https://github.com/emk/subtitles-rs"
readme = "README.md"
keywords = ["dictionary"]

exclude = ["/fixtures"]

[features]
default = ["download"]
download = ["unpack", "reqwest", "serde", "serde_json", "tokio"]
unpack = ["flate2", "lzma-rs", "tar", "tempfile"]

[dependencies]
flate2 = { version = "1.0.28", optional = true }
isolang = { version = "2.4.0" }
# Pure Rust LZMA decoder, because the upstream C library has been recently
# compromised by one of the maintainers.
lzma-rs = { version = "0.3.0", optional = true }
reqwest = { version = "0.12.2", features = ["json"], optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }
tar = { version = "0.4.40", optional = true }
tempfile = { version = "3.10.1", optional = true }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros"], optional = true }
tracing = { version = "0.1.40", features = ["attributes"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
